<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".ui.activities.RegisterActivity" android:id="@+id/relativeLayout2">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    >
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:src="@mipmap/doge_logo"
                android:id="@+id/imageView"/>


        <TextView
                android:fontFamily="@font/robotomedium"
                android:textSize="20sp"
                android:id="@+id/labelName"
                android:text="@string/crudName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
        <EditText
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/crudName"
        />


        <TextView
                android:fontFamily="@font/robotomedium"
                android:textSize="20sp"
                android:id="@+id/labelEmail"
                android:text="@string/crudEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/crudEmail"
        />


        <TextView
                android:textSize="20sp"
                android:fontFamily="@font/robotomedium"
                android:id="@+id/labelPassword"
                android:text="@string/crudPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
        <EditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:id="@+id/crudPassword"
        />


        <TextView
                android:textSize="20sp"
                android:id="@+id/labelConfirmPassword"
                android:text="@string/crudPasswordConfirm"
                android:layout_width="match_parent"
                android:fontFamily="@font/robotomedium"
                android:layout_height="wrap_content"
        />
        <EditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:id="@+id/crudConfirmPassword"
        />


        <Button
                android:textSize="20sp"
                android:fontFamily="@font/robotomedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnCrud"
                android:text="@string/btnCrud"
                android:layout_marginTop="15dp"
                android:background="@drawable/gradient_button"
                android:textColor="@color/colorBtnName"
        />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>