<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".ui.activities.CraftMemeActivity">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
        >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/craftTxt1"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotolight"
            />
            <EditText
                    android:id="@+id/craftTxt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="15"
                    android:layout_marginBottom="10dp"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/craftTxt2"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotolight"
            />
            <EditText
                    android:id="@+id/craftTxt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="15"
                    android:layout_marginBottom="10dp"
            />

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/imgTemplate"
            />
            <Button
                    android:background="@drawable/gradient_button"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoregular"
                    android:textColor="@color/colorBtnName"
                    android:id="@+id/btnCraft"
                    android:textAllCaps="false"
                    android:text="@string/btnCraft"
                    android:layout_height="wrap_content"
            />
        </LinearLayout>
    <LinearLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/gradient"
    />
</RelativeLayout>