<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".ui.activities.MainActivity" android:id="@+id/relativeLayout">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/imgLogo"
                android:src="@mipmap/ic_launcher"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/labelLogin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/labelLogin"
                android:layout_width="match_parent"
                android:textSize="25sp"
                android:fontFamily="@font/robotomedium"
                android:layout_height="wrap_content"
                android:text="@string/labelLogin"
                app:layout_constraintTop_toBottomOf="@+id/imgLogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/labelSenha"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputLogin"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/labelLogin" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" android:layout_marginEnd="10dp" android:layout_marginRight="10dp"/>


        <TextView
                android:id="@+id/labelSenha"
                android:textSize="25sp"
                android:fontFamily="@font/robotomedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelSenha"
                app:layout_constraintTop_toBottomOf="@+id/labelLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/inputSenha"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputSenha"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/labelSenha"
                android:layout_marginBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/buttonSubmit"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"/>


        <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBtnName"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:fontFamily="@font/robotomedium"
                android:background="@drawable/gradient_button"
                android:text="@string/submitBtn"
                app:layout_constraintTop_toBottomOf="@+id/inputSenha"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"/>
        <Button
                android:id="@+id/buttonRegister"
                android:textColor="@color/colorBtnName"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:fontFamily="@font/robotomedium"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_button"
                android:text="@string/registerBtn"
                app:layout_constraintTop_toBottomOf="@+id/buttonSubmit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>